# bdk-sp

cli/v2/: Cargo.toml
cli/v2/src/: main.rs
doc/tabconf7/: frigate_playbook.sh  justfile
example-crates/example_silentpayments/: Cargo.toml
example-crates/example_silentpayments/src/: main.rs
example-crates/example_silentpayments/src/indexer/: mod.rs
oracles/: Cargo.toml
oracles/src/: lib.rs
oracles/src/frigate/: mod.rs
silentpayments/src/receive/: mod.rs
silentpayments/tests/functional_tests/: serialization.rs
silentpayments/tests/functional_tests/bip352_vectors/: receive.rs  send.rs
