[package]
name = "bdk_sp_oracles"
version = "0.1.0"
edition = "2021"
authors.workspace = true

[dependencies]
bitcoin = "0.32.7"
futures = "0.3"
indexer = { version = "0.1.0", path = "../indexer", features = ["serde"]}
bip157 = "0.2.0"
redb = "2.4.0"
rayon = "1.11.0"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls", "http2", "charset"], default-features = false }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = { version = "1.0.142", features = ["raw_value"]}
electrum_streaming_client = { git = "https://github.com/sdmg15/electrum_streaming_client", branch = "master", features = ["frigate"]}
url = "2.5.4"
tracing = "0.1.41"
jsonrpc = "=0.18.0"

[lints]
workspace = true
